--- a/passarourbano/src/app/oferta/oferta.component.html
+++ b/passarourbano/src/app/oferta/oferta.component.html
@@ -43,6 +43,25 @@
     </div>
 
   </div>
+
+  <div class="row" style="margin-top: 25px; margin-bottom: 150px;">
+      <div class="col">
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#como-usar" role="tab" aria-controls="home">Como usar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"  data-toggle="tab" href="#onde-fica" role="tab">Onde fica</a>
+              </li>
+            </ul>
+            <div class="tab-content">
+              <div class="tab-pane fade show active" id="como-usar" role="tabpanel">Texto "Como usar"</div>
+              <div class="tab-pane fade" id="onde-fica" role="tabpanel">Texto: "Onde fica"</div>
+            </div>
+      </div>
+  </div>
+
+
 </div>
 <br>
 <br>
