--- a/passarourbano/src/app/oferta/oferta.component.html
+++ b/passarourbano/src/app/oferta/oferta.component.html
@@ -48,15 +48,16 @@
       <div class="col">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#como-usar" role="tab" aria-controls="home">Como usar</a>
+                <a class="nav-link" routerLinkActive="active" data-toggle="tab" routerLink="como-usar" role="tab" aria-controls="home">Como usar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"  data-toggle="tab" href="#onde-fica" role="tab">Onde fica</a>
+                <a class="nav-link"  data-toggle="tab" routerLink="onde-fica" role="tab">Onde fica?</a>
               </li>
             </ul>
             <div class="tab-content">
-              <div class="tab-pane fade show active" id="como-usar" role="tabpanel">Texto "Como usar"</div>
-              <div class="tab-pane fade" id="onde-fica" role="tabpanel">Texto: "Onde fica"</div>
+              <router-outlet></router-outlet>
+              <!-- <div class="tab-pane fade show active" id="como-usar" role="tabpanel">Texto "Como usar"</div>
+              <div class="tab-pane fade" id="onde-fica" role="tabpanel">Texto: "Onde fica"</div> -->
             </div>
       </div>
   </div>
