--- a/passarourbano/src/app/topo/topo.component.html
+++ b/passarourbano/src/app/topo/topo.component.html
@@ -1,10 +1,21 @@
 <div class="fixed-top">
   <nav class="navbar navbar-light bg-faded">
     <div class="container">
-      <a routerLink="" class="navbar-brand">
-        <img src="/assets/logo.png" />
-      </a>
-      <a a href="#"><img src="/assets/carrinho.png" /></a>
+
+        <div class="row col-lg-12 col-md-12 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-xs-4">
+              <a routerLink="" class="navbar-brand">
+                <img src="/assets/logo.png" />
+              </a>
+          </div>
+          <div class="col-lg-6 col-md-6 col-xs-6">
+              <input type="text" class="form-control" placeholder="Pesquisador de ofertas..."/>
+          </div>
+          <div class="col-lg-2 col-md-2 col-xs-2">
+              <a a href="#"><img src="/assets/carrinho.png" /></a>
+          </div>
+        </div>
+
     </div>
   </nav>
 
