--- a/passarourbano/src/app/topo/topo.component.html
+++ b/passarourbano/src/app/topo/topo.component.html
@@ -9,7 +9,12 @@
               </a>
           </div>
           <div class="col-lg-6 col-md-6 col-xs-6">
-              <input type="text" class="form-control" placeholder="Pesquisador de ofertas..."/>
+              <input type="text"
+                  class="form-control"
+                  placeholder="Pesquisador de ofertas..."
+                  #termoDaPesquisa
+                  (keyup)="pesquisa(termoDaPesquisa.value)"
+               />
           </div>
           <div class="col-lg-2 col-md-2 col-xs-2">
               <a a href="#"><img src="/assets/carrinho.png" /></a>
