--- a/passarourbano/src/app/topo/topo.component.html
+++ b/passarourbano/src/app/topo/topo.component.html
@@ -9,6 +9,7 @@
               </a>
           </div>
           <div class="col-lg-6 col-md-6 col-xs-6">
+            {{ofertas2 | json}}
               <input type="text"
                   class="form-control"
                   placeholder="Pesquisador de ofertas..."
