--- a/passarourbano/src/app/topo/topo.component.html
+++ b/passarourbano/src/app/topo/topo.component.html
@@ -9,7 +9,7 @@
               </a>
           </div>
           <div class="col-lg-6 col-md-6 col-xs-6">
-            {{ofertas2 | json}}
+            <!-- {{ofertas2 | json}} -->
               <input type="text"
                   class="form-control"
                   placeholder="Pesquisador de ofertas..."
@@ -19,7 +19,7 @@
 
               <!-- Usado para auto-complete -->
                <ul class="list-group" style="position: absolute">
-                <li class="list-group-item" *ngFor="let oferta of ofertas2">{{oferta.titulo}}</li>
+                <li class="list-group-item" *ngFor="let oferta of ofertas2">{{oferta.titulo | uppercase }}</li>
               </ul>
 
           </div>
