--- a/passarourbano/src/app/restaurantes/restaurantes.component.html
+++ b/passarourbano/src/app/restaurantes/restaurantes.component.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="row">
-            <p>{{oferta.valor | currency:'BRL': true}}</p>
+            <p>{{oferta.valor | currency:'BRL':'symbol'}}</p>
           </div>
 
           <div class="row">
