--- a/passarourbano/src/app/topo/topo.component.html
+++ b/passarourbano/src/app/topo/topo.component.html
@@ -19,7 +19,7 @@
 
               <!-- Usado para auto-complete -->
                <ul class="list-group" style="position: absolute">
-                <li class="list-group-item" *ngFor="let oferta of ofertas2">{{oferta.titulo | uppercase }}</li>
+                <li class="list-group-item" *ngFor="let oferta of ofertas2">{{oferta.titulo | descricaoReduzida }}</li>
               </ul>
 
           </div>
